--- a/src/components/characterList/CharacterList.module.css
+++ b/src/components/characterList/CharacterList.module.css
@@ -2,6 +2,7 @@
     min-height: 10vh;
     min-width: 10vh;
     overflow-x: hidden;
+    
 }
 
 .Card{
@@ -14,4 +15,13 @@
     background-clip: border-box;
     border: 1px solid rgb(0, 0,0,0.125);
     border-radius: 0.25;
+}
+
+
+.cardTitle{
+    color: #c7f0db !important; 
+}
+
+.cardContent{
+    color: #c7f0db !important; 
 }
